feature/folder_rebuild

--- a/public/index.html
+++ b/public/index.html
@@ -5,17 +5,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./styles/menu.css">
+    <link rel="stylesheet" href="../src/styles/menu.css">
+    <link rel="stylesheet" href="../src/styles/cart.css">
     <title>Kamakura Food</title>
 </head>
 
 <body class="container">
     <header class="header">
-        <img class="image-logo" src="./assets/img/logo.svg" alt="restaurant logo">
+        <img class="image-logo" src="../src/assets/img/logo.svg" alt="restaurant logo">
         <nav>
             <a class="nav-link" href="#">Inicio</a>
             <a class="nav-link" href="#">Contacto</a>
-            <button class="cart-menu" id="cart"><img src="./assets/img/cart.svg" alt=""></button>
+            <button class="cart-menu" id="cart"><img src="../src/assets/img/cart.svg" alt=""></button>
         </nav>
     </header>
     <div class="main-container">
@@ -41,7 +42,7 @@
                 <div id="cart-products">
                     <!-- Producto en el carrito de muestra (así se debería ver) -->
                     <div class="cart-container">
-                        <button class="close-button"><img src="./assets/img/close.svg" alt="close"></button>
+                        <button class="close-button"><img src="../src/assets/img/close.svg" alt="close"></button>
                         <div class="text-container">
                             <h3>Añade un plato</h3>
                             <h5>Precio €</h5>
@@ -59,7 +60,7 @@
             </div>
             <!-- Recibo (así se debería ver) -->
             <div id="receipt-container">
-                <button class="close-button" id="close-receipt"><img src="./assets/img/close.svg" alt="close"></button>
+                <button class="close-button" id="close-receipt"><img src="../src/assets/img/close.svg" alt="close"></button>
                 <h2 class="receipt-title">Recibo</h2>
                 <div class="receipt-product" id="receipt-product">
                     <h3>Título</h3>
@@ -73,7 +74,7 @@
             </div>
         </aside>
     </div>
-    <script src="./src/menu.js" type="module"></script>
+    <script src="../src/components/menu.js" type="module"></script>
 </body>
 
 </html>
